--- a/styles.css
+++ b/styles.css
@@ -324,6 +324,34 @@ header {
     color: var(--tertiary-color);
 }
 
+/* gallery section styles */
+.gallery-section {
+    padding: 20px 0 100px;
+}
+
+.gallery-section .gallery-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.gallery-section .gallery-list .gallery-item {
+    width: calc(100% / 3 - 32px);
+    overflow: hidden;
+}
+
+.gallery-section .gallery-list .gallery-item .gallery-img {
+    width: 100%;
+    height: 100%;
+    cursor: zoom-in;
+    border-radius: 8px;
+    transition: 0.3s ease;
+}
+
+.gallery-section .gallery-list .gallery-item:hover .gallery-img {
+    transform: scale(1.3);
+}
+
 @media screen and (max-width: 1024px) {
     .menu-section .menu-list {
         gap: 60px;
