--- a/styles.css
+++ b/styles.css
@@ -352,6 +352,78 @@ header {
     transform: scale(1.3);
 }
 
+/* contact section styles */
+.contact-section {
+    background: #fac7b7;
+    padding: 20px 0 100px;
+}
+
+.contact-section .section-content {
+    display: flex;
+    gap: 45px;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.contact-section .contact-info-list .contact-info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+
+.contact-section .contact-info-list .contact-info i {
+    font-size: 16px;
+}
+
+.contact-section .contact-info-list .contact-info p {
+    font-size: 14px;
+}
+
+.contact-section .contact-form {
+    max-width: 40%;
+}
+
+.contact-section .contact-form .form-input {
+    width: 100%;
+    height: 45px;
+    background: var(--white-color);
+    padding: 0 12px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid var(--tertiary-color);
+    margin-bottom: 16px;
+}
+
+.contact-section .contact-form .form-input:focus {
+    border: 1px solid var(--primary-color-rust);
+}
+
+.contact-section .contact-form textarea {
+    height: 100px;
+    padding: 12px;
+    width: 100%;
+    resize: vertical;
+}
+
+.contact-section .contact-form .submit-button {
+    padding: 10px 25px;
+    margin-top: 10px;
+    background-color: var(--tertiary-color);
+    color: var(--white-color);
+    border-radius: 30px;
+    border: 1px solid var(--tertiary-color);
+    font-weight: 500;
+    transition: 0.3s ease;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.contact-section .contact-form .submit-button:hover {
+    background: transparent;
+    color: var(--tertiary-color);
+}
+
 @media screen and (max-width: 1024px) {
     .menu-section .menu-list {
         gap: 60px;
